# BORON

./: .gitignore  README.md  a.s  exe  out  pyproject.toml
.github/workflows/: python-package.yml
boron/: __init__.py
boron/assembler/: __init__.py  assembler.py  instructions.py
boron/assembler/x16/General/: encoded_bytes.py  operands.py
boron/assembler/x64/: __init__.py
boron/assembler/x64/General/: encoded_bytes.py  exceptions.py  instructions.py  operands.py  registers.py
boron/assembler/x64/SSE/: registers.py
boron/assembler/x86_64/: __init__.py  encoded_bytes.py  instructions.py  operands.py  registers.py
boron/codegen/: __init__.py  builder.py  executer.py  section.py
boron/codegen/architecture/: __init__.py  encoded_bytes.py  instructions.py
boron/codegen/architecture/x16/General/: instructions.py  registers.py
boron/codegen/architecture/x64/General/: __init__.py  encoded_bytes.py  exceptions.py  instructions.py  operands.py  registers.py
boron/codegen/file/: __init__.py  elf.py
boron/disassembler/x64/: General.py  disassembler.py  prefixes.py  rules.py
example/: GPRegisters.py  assembler.py  builder.py  disassembler.py  execution.py
test/: test1.py  test_assemble.py
