[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boron-assembler" # pip install boron-assembler
version = "0.1.0"
description = "Boron is a hobby project that implements an x86-64 assembler in Python."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "TAN-JANT", email = "eymentanjant@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.pytest.ini_options]
testpaths = ["test"]

[tool.setuptools.packages.find]
where = ["."]
